# todo_app

./: pyproject.toml  render.yaml  ruff.toml  testdb.db
src/todo_app/: alembic.ini  database.py  dependencies.py  main.py  models.py  todosapp.db
src/todo_app/alembic/: env.py
src/todo_app/alembic/versions/: 8fefa30c45d6_create_phone_number_for_user_column.py
src/todo_app/routers/: admin.py  auth.py  todos.py  users.py
src/todo_app/static/js/: base.js
src/todo_app/templates/: add-todo.html  home.html  layout.html  login.html  navbar.html  register.html
test/: test_admin.py  test_auth.py  test_example.py  test_main.py  test_todos.py  test_users.py  utils.py
