[project]
name = "todo_app"
version = "0.1.0"
description = "todo_app"
authors = [
    {name = "Ivan Tkachenko", email = "i.tkachenko@zohomail.eu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = ">=3.12"
annotated-types = "^0.7.0"
anyio = "^4.9.0"
asgiref = "^3.8.1"
attrs = "^25.3.0"
"backports.tarfile" = "^1.2.0"
bcrypt = "^3.2.0, <4.0.0"
beautifulsoup4 = "^4.13.3"
fastapi = "^0.115.12"
fastjsonschema = "^2.21.1"
filelock = "^3.18.0"
findpython = "^0.6.3"
jose = "^1.0.0"
keyring = "^25.6.0"
pydantic = "^2.11.3"
pydantic_core = "^2.27.2"
PyMySQL = "^1.1.1"
python-jose = "^3.4.0"
python-multipart = "^0.0.20"
SQLAlchemy = "^2.0.39"
sqlparse = "^0.5.3"
starlette = "^0.46.1"
uvicorn = "^0.34.0"
pillow = "^11.1.0"
cffi = "^1.17.1"
charset-normalizer = "^3.4.1"
click = "^8.1.8"
cryptography = "^44.0.2"
certifi = "^2025.1.31"
httpcore = "^1.0.7"
httpx = "^0.28.1"
idna = "^3.10"
importlib_metadata = "^8.6.1"
iniconfig = "^2.1.0"
installer = "^0.7.0"
"jaraco.classes" = "^3.4.0"
"jaraco.context" = "^6.0.1"
"jaraco.functools" = "^4.1.0"
mccabe = "^0.7.0"
msgpack = "^1.1.0"
packaging = "^24.2"
passlib = "^1.7.4, <2.0.0"
pbs-installer = "^2025.4.9"
pep8-naming = "^0.14.1"
pkginfo = "^1.12.1.2"
platformdirs = "^4.3.7"
pluggy = "^1.5.0"
py = "^1.11.0"
pyasn1 = ">=0.4.1,<0.5.0"
sniffio = "^1.3.1"
snowballstemmer = "^2.2.0"
soupsieve = "^2.6"
tomli = "^2.2.1"
tomlkit = "^0.13.2"
trove-classifiers = "^2025.3.19.19"
typing_extensions = "^4.12.2"
urllib3 = "^2.3.0"
virtualenv = "^20.30.0"
xattr = "^1.1.4"
zipp = "^3.21.0"
zstandard = "^0.23.0"
aiofiles = "^24.1.0"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
flake8-docstrings = "^1.7.0"
pycodestyle = "^2.13.0"
pydocstyle = "^6.3.0"
pyflakes = "^3.3.2"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
python-dateutil = "^2.9.0.post0"
mixer = "^7.2.2"
Faker = "^12.0.1"
yapf = "^0.43.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"