[tool.poetry]
name = "todo_app"
version = "0.1.0"
description = "todo_app"
license = "MIT"
readme = "README.md"
authors = ["Ivan Tkachenko <i.tkachenko@zohomail.eu>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
"backports.tarfile" = ">=1.2.0,<2.0.0"
anyio = ">=4.9.0,<5.0.0"
asgiref = ">=3.8.1,<3.9.0"
attrs = ">=25.3.0,<26.0.0"
bcrypt = ">=3.2.0,<4.0.0"
beautifulsoup4 = ">=4.13.3,<4.14.0"
fastapi = ">=0.115.12,<0.116.0"
fastjsonschema = ">=2.21.1,<2.22.0"
filelock = ">=3.18.0,<3.19.0"
findpython = ">=0.6.3,<0.7.0"
jose = ">=1.0.0,<1.1.0"
keyring = ">=25.6.0,<25.7.0"
pydantic = ">=2.11.3,<2.12.0"
PyMySQL = ">=1.1.1,<1.2.0"
python-jose = ">=3.4.0,<3.5.0"
python-multipart = ">=0.0.20,<0.0.21"
SQLAlchemy = ">=2.0.39,<2.1.0"
sqlparse = ">=0.5.3,<0.6.0"
starlette = ">=0.46.1,<0.47.0"
uvicorn = ">=0.34.0,<0.35.0"
pillow = ">=11.1.0,<11.2.0"
cffi = ">=1.17.1,<1.18.0"
charset-normalizer = ">=3.4.1,<3.5.0"
click = ">=8.1.8,<8.2.0"
cryptography = ">=44.0.2,<44.1.0"
certifi = ">=2025.1.31,<2025.2.0"
httpcore = ">=1.0.7,<1.1.0"
httpx = ">=0.28.1,<0.29.0"
idna = ">=3.10,<3.11"
importlib_metadata = ">=8.6.1,<8.7.0"
iniconfig = ">=2.1.0,<2.2.0"
installer = ">=0.7.0,<0.8.0"
"jaraco.classes" = ">=3.4.0,<3.5.0"
"jaraco.context" = ">=6.0.1,<6.1.0"
"jaraco.functools" = ">=4.1.0,<4.2.0"
mccabe = ">=0.7.0,<0.8.0"
msgpack = ">=1.1.0,<1.2.0"
packaging = ">=24.2,<24.3"
passlib = ">=1.7.4,<2.0.0"
"pbs-installer" = ">=2025.4.9,<2025.4.10"
"pep8-naming" = ">=0.14.1,<0.15.0"
pkginfo = ">=1.12.1.2,<1.12.2"
platformdirs = ">=4.3.7,<4.4.0"
pluggy = ">=1.5.0,<1.6.0"
py = ">=1.11.0,<1.12.0"
pyasn1 = ">=0.4.1,<0.5.0"
sniffio = ">=1.3.1,<1.4.0"
snowballstemmer = ">=2.2.0,<2.3.0"
soupsieve = ">=2.6,<2.7"
tomli = ">=2.2.1,<2.3.0"
tomlkit = ">=0.13.2,<0.14.0"
"trove-classifiers" = ">=2025.3.19.19,<2025.3.19.20"
typing_extensions = ">=4.12.2,<4.13.0"
urllib3 = ">=2.3.0,<2.4.0"
virtualenv = ">=20.30.0,<20.31.0"
xattr = ">=1.1.4,<1.2.0"
zipp = ">=3.21.0,<3.22.0"
zstandard = ">=0.23.0,<0.24.0"
aiofiles = ">=24.1.0,<24.2.0"
jinja2 = ">=3.1.6,<3.2.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
flake8-docstrings = "^1.7.0"
pycodestyle = "^2.13.0"
pydocstyle = "^6.3.0"
pyflakes = "^3.3.2"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
python-dateutil = "^2.9.0.post0"
mixer = "^7.2.2"
Faker = "^12.0.1"
yapf = "^0.43.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
